# CloseEnv

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  false_positive.yml  feature_request.yml
.github/workflows/: ci.yml
examples/: github-action.yml  pre-commit.sh
src/: lib.rs  main.rs
