[package]
name = "closeenv"
description = "Secretless repository scanner for checking whether a repo is safe to publish."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/once0811-arch/CloseEnv"
version = "0.1.0"
readme = "README.md"
categories = ["command-line-utilities", "development-tools"]
keywords = ["secrets", "scanner", "security", "dotenv", "cli"]

[[bin]]
name = "closeenv"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"

[dev-dependencies]
tempfile = "3.15.0"
